--- a/Galery.html
+++ b/Galery.html
@@ -332,6 +332,143 @@
         }, {
             src: "image/Gallery/img (60).webp",
             alt: "Ảnh 60"
+        }, {
+            src: "image/Gallery/img (61).webp",
+            alt: "Ảnh 61"
+        }, {
+            src: "image/Gallery/img (62).webp",
+            alt: "Ảnh 61"
+        }, {
+            src: "image/Gallery/img (63).webp",
+            alt: "Ảnh 64"
+        }, {
+            src: "image/Gallery/img (64).webp",
+            alt: "Ảnh 64"
+        }, {
+            src: "image/Gallery/img (65).webp",
+            alt: "Ảnh 65"
+        }, {
+            src: "image/Gallery/img (66).webp",
+            alt: "Ảnh 66"
+        }, {
+            src: "image/Gallery/img (67).webp",
+            alt: "Ảnh 67"
+        }, {
+            src: "image/Gallery/img (68).webp",
+            alt: "Ảnh 68"
+        }, {
+            src: "image/Gallery/img (69).webp",
+            alt: "Ảnh 69"
+        }, {
+            src: "image/Gallery/img (70).webp",
+            alt: "Ảnh 70"
+        }, {
+            src: "image/Gallery/img (71).webp",
+            alt: "Ảnh 71"
+        }, {
+            src: "image/Gallery/img (72).webp",
+            alt: "Ảnh 72"
+        }, {
+            src: "image/Gallery/img (73).webp",
+            alt: "Ảnh 73"
+        }, {
+            src: "image/Gallery/img (74).webp",
+            alt: "Ảnh 74"
+        }, {
+            src: "image/Gallery/img (75).webp",
+            alt: "Ảnh 75"
+        }, {
+            src: "image/Gallery/img (76).webp",
+            alt: "Ảnh 76"
+        }, {
+            src: "image/Gallery/img (77).webp",
+            alt: "Ảnh 77"
+        }, {
+            src: "image/Gallery/img (78).webp",
+            alt: "Ảnh 78"
+        }, {
+            src: "image/Gallery/img (79).webp",
+            alt: "Ảnh 79"
+
+        }, {
+            src: "image/Gallery/img (81).webp",
+            alt: "Ảnh 81"
+        }, {
+            src: "image/Gallery/img (82).webp",
+            alt: "Ảnh 82"
+        }, {
+            src: "image/Gallery/img (83).webp",
+            alt: "Ảnh 83"
+        }, {
+            src: "image/Gallery/img (84).webp",
+            alt: "Ảnh 84"
+        }, {
+            src: "image/Gallery/img (85).webp",
+            alt: "Ảnh 85"
+        }, {
+            src: "image/Gallery/img (86).webp",
+            alt: "Ảnh 86"
+        }, {
+            src: "image/Gallery/img (87).webp",
+            alt: "Ảnh 87"
+        }, {
+            src: "image/Gallery/img (88).webp",
+            alt: "Ảnh 88"
+        }, {
+            src: "image/Gallery/img (89).webp",
+            alt: "Ảnh 89"
+
+        }, {
+            src: "image/Gallery/img (90).webp",
+            alt: "Ảnh 90"
+        }, {
+            src: "image/Gallery/img (91).webp",
+            alt: "Ảnh 91"
+        }, {
+            src: "image/Gallery/img (92).webp",
+            alt: "Ảnh 92"
+        }, {
+            src: "image/Gallery/img (93).webp",
+            alt: "Ảnh 93"
+        }, {
+            src: "image/Gallery/img (94).webp",
+            alt: "Ảnh 94"
+        }, {
+            src: "image/Gallery/img (95).webp",
+            alt: "Ảnh 95"
+        }, {
+            src: "image/Gallery/img (96).webp",
+            alt: "Ảnh 96"
+        }, {
+            src: "image/Gallery/img (97).webp",
+            alt: "Ảnh 97"
+        }, {
+            src: "image/Gallery/img (98).webp",
+            alt: "Ảnh 98"
+        }, {
+            src: "image/Gallery/img (99).webp",
+            alt: "Ảnh 99"
+        }, {
+            src: "image/Gallery/img (100).webp",
+            alt: "Ảnh 100"
+        }, {
+            src: "image/Gallery/img (101).webp",
+            alt: "Ảnh 101"
+        }, {
+            src: "image/Gallery/img (102).webp",
+            alt: "Ảnh 102"
+        }, {
+            src: "image/Gallery/img (103).webp",
+            alt: "Ảnh 103"
+        }, {
+            src: "image/Gallery/img (104).webp",
+            alt: "Ảnh 104"
+        }, {
+            src: "image/Gallery/img (105).webp",
+            alt: "Ảnh 105"
+        }, {
+            src: "image/Gallery/img (106).webp",
+            alt: "Ảnh 106"
         }];
 
 
