--- a/Galery.html
+++ b/Galery.html
@@ -469,6 +469,15 @@
         }, {
             src: "image/Gallery/img (106).webp",
             alt: "Ảnh 106"
+		}, {
+            src: "image/Gallery/img (107).webp",
+            alt: "Ảnh 107"
+		}, {
+            src: "image/Gallery/img (108).webp",
+            alt: "Ảnh 108"
+		}, {
+            src: "image/Gallery/img (109).webp",
+            alt: "Ảnh 109"
         }];
 
 
