Update Gallery In Index & Update Logo Partner

--- a/Gallery.html
+++ b/Gallery.html
@@ -88,7 +88,7 @@
             <li><a href="index.html"><i class="fa-solid fa-house"></i> Trang chủ</a></li>
             <li><a href="Meo.html"><i class="fa-solid fa-lightbulb"></i> Mẹo thi</a></li>
             <li><a href="https://120mophong.com/" target="_blank"><i class="fa-solid fa-car"></i> 120 Mô phỏng</a></li>
-            <li><a href="Galery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
+            <li><a href="Gallery.html"><i class="fa-solid fa-image"></i> Thư viện ảnh</a></li>
             <li><a href="#footer"><i class="fa-solid fa-phone"></i> Liên hệ</a></li>
         </ul>
         <section class="stats-section">
@@ -469,13 +469,13 @@
         }, {
             src: "image/Gallery/img (106).webp",
             alt: "Ảnh 106"
-		}, {
+        }, {
             src: "image/Gallery/img (107).webp",
             alt: "Ảnh 107"
-		}, {
+        }, {
             src: "image/Gallery/img (108).webp",
             alt: "Ảnh 108"
-		}, {
+        }, {
             src: "image/Gallery/img (109).webp",
             alt: "Ảnh 109"
         }];
