Update caption image

--- a/index.html
+++ b/index.html
@@ -431,32 +431,44 @@
             // Danh sách hình ảnh tiêu biểu
             const featuredImages = [{
                 src: "image/Gallery/img (1).webp",
-                alt: "Trung tâm đào tạo lái xe Taylaimoi.com",
-                caption: "Không gian học tập hiện đại tại Taylaimoi.com"
+                alt: "Nhà sáng lập Taylaimoi.com",
+                caption: "Nhà sáng lập Taylaimoi.com và 120mophong.com"
             }, {
                 src: "image/Gallery/img (2).webp",
-                alt: "Thực hành lái xe",
-                caption: "Học viên đang thực hành lái xe với giáo viên"
+                alt: "FPT và Taylaimoi.com",
+                caption: "Hợp tác với các đơn vị tập đoàn hàng đầu Việt Nam"
             }, {
                 src: "image/Gallery/img (3).webp",
-                alt: "Mô phỏng tình huống giao thông",
-                caption: "Mô phỏng các tình huống giao thông thực tế"
+                alt: "Nhà sáng lập gặp học viên",
+                caption: "Nhà sáng lập cùng gặp mặt học viên người nổi tiếng tại Việt Nam"
             }, {
                 src: "image/Gallery/img (4).webp",
-                alt: "Giờ học lý thuyết",
-                caption: "Giờ học lý thuyết với giáo viên giàu kinh nghiệm"
+                alt: "Đội ngũ giáo viên",
+                caption: "Đội ngũ giáo viên tận tâm, chuyên nghiệp của Taylaimoi.com"
             }, {
                 src: "image/Gallery/img (5).webp",
-                alt: "Lễ tốt nghiệp",
-                caption: "Lễ trao bằng tốt nghiệp cho học viên xuất sắc"
+                alt: "Trao chứng nhận",
+                caption: "Trao chứng nhận cho các giáo viên giảng dạy bằng công nghệ"
             }, {
                 src: "image/Gallery/img (6).webp",
                 alt: "Học viên thực hành",
-                caption: "Học viên thực hành trên xe tập lái"
+                caption: "Buổi đào tạo thực hành với công nghệ mô phỏng hiện đại"
             }, {
                 src: "image/Gallery/img (7).webp",
-                alt: "Mô hình giảng dạy",
-                caption: "Mô hình giảng dạy trực quan, dễ hiểu"
+                alt: "Mô hình mô phỏng giảng dạy",
+                caption: "Mô hình mô phỏng giảng dạy trực quan, dễ hiểu"
+            }, {
+                src: "image/Gallery/img (8).webp",
+                alt: "Học viên thực hành học tập",
+                caption: "Học viên thực hành học tập với mô hình mô phỏng trên xe thật"
+            }, {
+                src: "image/Gallery/img (9).webp",
+                alt: "Khai trương văn phòng mới",
+                caption: "Khai trương văn phòng mới của Taylaimoi.com"
+            }, {
+                src: "image/Gallery/img (10).webp",
+                alt: "Khai trương văn phòng tại Chương Mỹ",
+                caption: "Đội ngũ giáo viên khai trương văn phòng tại Chương Mỹ"
             }];
 
             const carousel = document.querySelector('.carousel');
