--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         <!--Hình ảnh tiêu biểu-->
         <!-- Carousel Hình Ảnh Tiêu Biểu -->
-        <h3 class="section-title">HÌNH ẢNH TIÊU BIỂU</h3>
+        <h3 class="section-title">THƯƠNG HIỆU TAYLAIMOI.COM</h3>
         <div class="carousel-container">
             <div class="carousel">
                 <!-- Các slide sẽ được thêm bằng JavaScript -->
