--- a/Meo.html
+++ b/Meo.html
@@ -233,6 +233,16 @@
 </head>
 
 <body>
+    <!-- Chat Zalo -->
+    <div id="zalo-chat-btn" class="zalo-chat-btn">
+        <img src="image/icon_zalo.svg" alt="Chat Zalo">
+        <span>Chat với tôi</span>
+    </div>
+    <script>
+        document.getElementById('zalo-chat-btn').addEventListener('click', function() {
+            window.open('https://zalo.me/0904639896', '_blank');
+        });
+    </script>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {},
